# WhisperVideoText

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/whispervideotext/: __init__.py  __main__.py  cmd_parser.py  utils.py  video_file_clip_utils.py  whisper_transcriber.py
